--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,51 @@
+# Built application files
+*.apk
+*.ap_
+*.aab
+
+# Files for the ART/Dalvik VM
+*.dex
+
+# Java class files
+*.class
+
+# Generated files
+bin/
+gen/
+out/
+
+# Gradle files
+.gradle/
+.idea/
+build/
+
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Log Files
+*.log
+
+# IntelliJ
 *.iml
+.DS_Store
+
+# Android Studio captures folder
+/captures
+
+# External native build folder generated in Android Studio 2.2 and later
+.externalNativeBuild
+commonlib/build/
+mobilertc/build/
+app/debug/
+app/release/
+
+# Release folder
+release/
+app/debug/output-metadata.json
+debugkeystore/
+keys/
+
 .gradle
 /local.properties
 /.idea/caches
@@ -7,9 +54,7 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
-.DS_Store
 /build
-/captures
-.externalNativeBuild
 .cxx
-local.properties
+/.idea/
+/.kotlin/
